--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8" />
-        <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+        <link rel="icon" type="image/svg+xml" href="./vite.svg" />
         
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Vite App</title>
-      <script type="module" crossorigin src="/assets/index.af726bda.js"></script>
-      <link rel="stylesheet" href="/assets/index.b7253009.css">
+      <script type="module" crossorigin src="./assets/index.af726bda.js"></script>
+      <link rel="stylesheet" href="./assets/index.b7253009.css">
     </head>
     <body>
         <nav class="bg-amber-400 relative py-4 shadow-md">
